force-app/main/default/objects/gupshupcrm__WhatsApp_Message_History__c/gupshupcrm__WhatsApp_Message_History__c.object-meta.xml
<CustomObject>
    <label>WhatsApp Message History</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WhatsApp Message Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>