force-app/main/default/objects/gupshupcrm__WhatsApp_Message_History__c/fields/gupshupcrm__Bulk_Staging__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Bulk_Staging__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bulk Staging</label>
    <referenceTo>gupshupcrm__Bulk_Staging__c</referenceTo>
    <relationshipLabel>WhatsApp Message Historys</relationshipLabel>
    <relationshipName>WhatsApp_Message_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>