force-app/main/default/objects/gupshupcrm__WhatsApp_Message_History__c/fields/gupshupcrm__Campaign__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>WhatsApp Message Historys</relationshipLabel>
    <relationshipName>WhatsApp_Message_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>