force-app/main/default/objects/gupshupcrm__WhatsApp_Message_History__c/fields/gupshupcrm__Delivered_From__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Delivered_From__c</fullName>
    <label>Delivered From</label>
    <type>Phone</type>
</CustomField>