force-app/main/default/objects/gupshupcrm__WhatsApp_Message_History__c/fields/gupshupcrm__Is_Media_Attached__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Is_Media_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Media Attached</label>
    <type>Checkbox</type>
</CustomField>