force-app/main/default/objects/gupshupcrm__WhatsApp_Message_History__c/fields/gupshupcrm__Lead__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>WhatsApp Message Historys</relationshipLabel>
    <relationshipName>WhatsApp_Message_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>