force-app/main/default/objects/gupshupcrm__WhatsApp_Message_History__c/fields/gupshupcrm__Message_Body__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Message_Body__c</fullName>
    <label>Message Body</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>