force-app/main/default/objects/gupshupcrm__WhatsApp_Message_History__c/fields/gupshupcrm__Message_Footer__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Message_Footer__c</fullName>
    <label>Message Footer</label>
    <length>60</length>
    <type>Text</type>
</CustomField>