force-app/main/default/objects/gupshupcrm__WhatsApp_Message_History__c/fields/gupshupcrm__Message_Header__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Message_Header__c</fullName>
    <label>Message Header</label>
    <length>60</length>
    <type>Text</type>
</CustomField>