force-app/main/default/objects/gupshupcrm__WhatsApp_Message_History__c/fields/gupshupcrm__Message_Type__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Message_Type__c</fullName>
    <label>Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In</fullName>
            </value>
            <value>
                <fullName>Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>