force-app/main/default/objects/gupshupcrm__WhatsApp_Message_History__c/fields/gupshupcrm__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>WhatsApp Message Historys</relationshipLabel>
    <relationshipName>WhatsApp_Message_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>