force-app/main/default/objects/gupshupcrm__WhatsApp_Message_History__c/fields/gupshupcrm__Response_Message__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Response_Message__c</fullName>
    <label>Response Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>