force-app/main/default/objects/gupshupcrm__WhatsApp_Message_History__c/fields/gupshupcrm__Status__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Delivered</fullName>
            </value>
            <value>
                <fullName>success</fullName>
                <label>Success</label>
            </value>
            <value>
                <fullName>Seen</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Exception Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>