force-app/main/default/objects/gupshupcrm__WhatsApp_Message_History__c/fields/gupshupcrm__Template_Type__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Template_Type__c</fullName>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TEXT</fullName>
            </value>
            <value>
                <fullName>IMAGE</fullName>
            </value>
            <value>
                <fullName>DOCUMENT</fullName>
            </value>
            <value>
                <fullName>VIDEO</fullName>
            </value>
            <value>
                <fullName>REPLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>