force-app/main/default/objects/gupshupcrm__WhatsApp_Message_History__c/fields/gupshupcrm__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Timestamp__c</fullName>
    <label>Timestamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>