force-app/main/default/objects/gupshupcrm__WhatsApp_Message_History__c/fields/gupshupcrm__Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Transaction_Id__c</fullName>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>