force-app/main/default/objects/gupshupcrm__WhatsApp_Message_History__c/listViews/gupshupcrm__All.listView-meta.xml
<ListView>
    <fullName>gupshupcrm__All</fullName>
    <columns>NAME</columns>
    <columns>gupshupcrm__Message_Body__c</columns>
    <columns>gupshupcrm__Status__c</columns>
    <columns>gupshupcrm__Message_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>gupshupcrm__Response_Message__c</columns>
    <columns>gupshupcrm__Transaction_Id__c</columns>
    <columns>gupshupcrm__Is_Media_Attached__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>